[gd_scene load_steps=2 format=3 uid="uid://byc5xwxxu5ars"]

[ext_resource type="Script" path="res://scene/update/scene_update.gd" id="1_eyr3u"]

[node name="scene_update" type="CanvasLayer" groups=["update"]]
process_mode = 2
script = ExtResource("1_eyr3u")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
color = Color(0, 0, 0, 0.227451)

[node name="MarginContainer" type="MarginContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect/MarginContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="ColorRect/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 40
theme_override_constants/margin_right = 40

[node name="ColorRect" type="ColorRect" parent="ColorRect/MarginContainer/HBoxContainer/MarginContainer"]
layout_mode = 2
color = Color(0, 0, 0, 0.403922)

[node name="title1" type="Label" parent="ColorRect/MarginContainer/HBoxContainer/MarginContainer/ColorRect"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -262.0
offset_top = 49.0
offset_right = 262.0
offset_bottom = 195.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 60
text = "TITLE
"
horizontal_alignment = 1

[node name="desc1" type="Label" parent="ColorRect/MarginContainer/HBoxContainer/MarginContainer/ColorRect"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 34.0
offset_top = -277.0
offset_right = -45.0
offset_bottom = 314.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 50
text = "DESCDESCDESCDESCDESCDESCDESCDESCDESCDESC"
autowrap_mode = 1

[node name="button1" type="Button" parent="ColorRect/MarginContainer/HBoxContainer/MarginContainer/ColorRect"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 31.0
offset_top = -135.0
offset_right = -40.0
offset_bottom = -38.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 40
text = "选择"

[node name="MarginContainer2" type="MarginContainer" parent="ColorRect/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 40
theme_override_constants/margin_right = 40

[node name="ColorRect" type="ColorRect" parent="ColorRect/MarginContainer/HBoxContainer/MarginContainer2"]
layout_mode = 2
color = Color(0, 0, 0, 0.403922)

[node name="title2" type="Label" parent="ColorRect/MarginContainer/HBoxContainer/MarginContainer2/ColorRect"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -262.0
offset_top = 49.0
offset_right = 262.0
offset_bottom = 195.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 60
text = "TITLE
"
horizontal_alignment = 1

[node name="desc2" type="Label" parent="ColorRect/MarginContainer/HBoxContainer/MarginContainer2/ColorRect"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 34.0
offset_top = -277.0
offset_right = -45.0
offset_bottom = 314.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 50
text = "DESC"
autowrap_mode = 1

[node name="button2" type="Button" parent="ColorRect/MarginContainer/HBoxContainer/MarginContainer2/ColorRect"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 31.0
offset_top = -135.0
offset_right = -40.0
offset_bottom = -38.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 40
text = "选择"

[node name="MarginContainer3" type="MarginContainer" parent="ColorRect/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 40
theme_override_constants/margin_right = 40

[node name="ColorRect" type="ColorRect" parent="ColorRect/MarginContainer/HBoxContainer/MarginContainer3"]
layout_mode = 2
color = Color(0, 0, 0, 0.403922)

[node name="title3" type="Label" parent="ColorRect/MarginContainer/HBoxContainer/MarginContainer3/ColorRect"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -262.0
offset_top = 49.0
offset_right = 262.0
offset_bottom = 195.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 60
text = "TITLE
"
horizontal_alignment = 1

[node name="desc3" type="Label" parent="ColorRect/MarginContainer/HBoxContainer/MarginContainer3/ColorRect"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 34.0
offset_top = -277.0
offset_right = -45.0
offset_bottom = 314.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 50
text = "DESC"
autowrap_mode = 1

[node name="button3" type="Button" parent="ColorRect/MarginContainer/HBoxContainer/MarginContainer3/ColorRect"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 31.0
offset_top = -135.0
offset_right = -40.0
offset_bottom = -38.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 40
text = "选择"

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="ColorRect/MarginContainer/HBoxContainer/MarginContainer/ColorRect/button1" to="." method="_on_button_1_pressed"]
[connection signal="pressed" from="ColorRect/MarginContainer/HBoxContainer/MarginContainer2/ColorRect/button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="ColorRect/MarginContainer/HBoxContainer/MarginContainer3/ColorRect/button3" to="." method="_on_button_3_pressed"]
